fix first task - fix vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,13 @@ body, p, h1, h2, div, header {
     margin: 0px;
     padding: 0px;
 }
-div,header, p , h1, h2{
-   /* border: 1px solid #2b2b2b;*/
+div,header, p , h1, h2, span{
+    /*
+    border: 1px solid #2b2b2b;
+    */
 }
 
-header, footer, .content {
+header, footer, .wrapper {
     width: 1200px;
 }
 header, footer {
@@ -15,6 +17,8 @@ header, footer {
 }
 header {
     background-color:  darkkhaki;
+    vertical-align: middle;
+
 }
 .info ,.logo, .navigate, .location {
     height: 150px;
@@ -22,15 +26,19 @@ header {
 }
 .info {
     width: 50%;
-    vertical-align: top;
     font-size: 14px;
+    line-height: 150px;
+    vertical-align: top;
 }
+
 .logo, .navigate{
     width: 25%;
 }
 .content {
     background: #fddfdf;
-    height: 1500px;
+    width: 50%;
+    height: 2000px;
+    margin: auto;
 }
 
 .content>p {
@@ -46,10 +54,10 @@ footer {
     background-color:  #dad55e;
 }
 .location {
-    width: 30%;
+    width: 50%;
 }
 footer .info {
-    width: 70%;
+    width: 50%;
 }
 
 
